media/plex/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: media
spec:
  hostnames:
    - "plex.${INTERNAL_HOSTNAME}"
  parentRefs:
    - name: production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: plex
          port: 32400
